@@ -5,12 +5,14 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
+import java.util.List;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -20,7 +22,7 @@ import fr.my.home.ffxivgametime.tools.Settings;
 /**
  * FFXIV GameTime Updater
  * 
- * @version 1.2
+ * @version 1.3
  */
 public class MyUpdater {
 	private static Logger logger = LogManager.getLogger(MyUpdater.class);
@@ -178,8 +180,8 @@ public class MyUpdater {
 	private static void startMainApp() throws IOException, InterruptedException {
 
 		// Exec runtime
-		Runtime runtime = Runtime.getRuntime();
-		Process process = runtime.exec(UPDATE_FILE);
+		ProcessBuilder pb = new ProcessBuilder(List.of(new File(UPDATE_FILE).getAbsolutePath()));
+		Process process = pb.start();
 		process.waitFor();
 
 	}
@@ -196,7 +198,7 @@ public class MyUpdater {
 
 		File downloadFile = new File(TMP_DIR + "\\" + filename);
 		// Create connection
-		URL url = new URL(link);
+		URL url = URI.create(link).toURL();
 		URLConnection con = url.openConnection();
 		con.setRequestProperty("User-Agent",
 				"Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; .NET CLR 1.0.3705; .NET CLR 1.1.4322; .NET CLR 1.2.30703)");
